--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
   <head>
     <link rel="manifest" href="manifest.json" />
     <link rel="shortcut icon" href="favicon.ico" />
-    <title>React Webpack Typescript Starter</title>
+    <title>Alden nguyen</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   </head>
   <body class="bg-triangles">
